RESOLVED FIXED279232
REGRESSION(283049@main): [ macOS EWS ]: imported/w3c/web-platform-tests/media-source/mediasource-addsourcebuffer-mode.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=279232
Summary REGRESSION(283049@main): [ macOS EWS ]: imported/w3c/web-platform-tests/media...
Marta Darbinyan
Reported 2024-09-05 16:01:30 PDT
The following test is flaky crash in macOS-Sonoma-Debug-WK2-Tests-EWS and on main. The crash started occurring within the range of 283049@main. History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fmedia-source%2Fmediasource-addsourcebuffer-mode.html&flavor=wk2&style=debug&version_name=Sonoma Crash logs: stderr: 1 0x35deda15c WebCore::SourceBufferPrivateAVFObjC::enqueueSample(WTF::Ref<WebCore::MediaSampleAVFObjC, WTF::RawPtrTraits<WebCore::MediaSampleAVFObjC>, WTF::DefaultRefDerefTraits<WebCore::MediaSampleAVFObjC>>&&, unsigned long long) 2 0x35deda800 WebCore::SourceBufferPrivateAVFObjC::enqueueSample(WTF::Ref<WebCore::MediaSample, WTF::RawPtrTraits<WebCore::MediaSample>, WTF::DefaultRefDerefTraits<WebCore::MediaSample>>&&, unsigned long long) 3 0x36349ae28 WebCore::SourceBufferPrivate::provideMediaData(WebCore::TrackBuffer&, unsigned long long) 4 0x363499dc4 WebCore::SourceBufferPrivate::reenqueueMediaForTime(WebCore::TrackBuffer&, unsigned long long, WTF::MediaTime const&, WebCore::SourceBufferPrivate::NeedsFlush) 5 0x36349b0a0 WebCore::SourceBufferPrivate::reenqueueMediaIfNeeded(WTF::MediaTime const&) 6 0x146ccb754 WebKit::RemoteSourceBufferProxy::reenqueueMediaIfNeeded(WTF::MediaTime const&) 7 0x14647bfac auto void IPC::callMemberFunction<WebKit::RemoteSourceBufferProxy, WebKit::RemoteSourceBufferProxy, void (WTF::MediaTime const&), std::__1::tuple<WTF::MediaTime>>(WebKit::RemoteSourceBufferProxy*, void (WebKit::RemoteSourceBufferProxy::*)(WTF::MediaTime const&), std::__1::tuple<WTF::MediaTime>&&)::'lambda'(auto&&...)::operator()<WTF::MediaTime>(auto&&...) const 8 0x14647bf24 decltype(std::declval<WebKit::RemoteSourceBufferProxy>()(std::declval<WTF::MediaTime>())) std::__1::__invoke[abi:sn170006]<void IPC::callMemberFunction<WebKit::RemoteSourceBufferProxy, WebKit::RemoteSourceBufferProxy, void (WTF::MediaTime const&), std::__1::tuple<WTF::MediaTime>>(WebKit::RemoteSourceBufferProxy*, void (WebKit::RemoteSourceBufferProxy::*)(WTF::MediaTime const&), std::__1::tuple<WTF::MediaTime>&&)::'lambda'(auto&&...), WTF::MediaTime>(WebKit::RemoteSourceBufferProxy&&, WTF::MediaTime&&) 9 0x14647bef8 decltype(auto) std::__1::__apply_tuple_impl[abi:sn170006]<void IPC::callMemberFunction<WebKit::RemoteSourceBufferProxy, WebKit::RemoteSourceBufferProxy, void (WTF::MediaTime const&), std::__1::tuple<WTF::MediaTime>>(WebKit::RemoteSourceBufferProxy*, void (WebKit::RemoteSourceBufferProxy::*)(WTF::MediaTime const&), std::__1::tuple<WTF::MediaTime>&&)::'lambda'(auto&&...), std::__1::tuple<WTF::MediaTime>, 0ul>(WebKit::RemoteSourceBufferProxy&&, WebKit::RemoteSourceBufferProxy&&, std::__1::__tuple_indices<0ul>) 10 0x14647bebc decltype(auto) std::__1::apply[abi:sn170006]<void IPC::callMemberFunction<WebKit::RemoteSourceBufferProxy, WebKit::RemoteSourceBufferProxy, void (WTF::MediaTime const&), std::__1::tuple<WTF::MediaTime>>(WebKit::RemoteSourceBufferProxy*, void (WebKit::RemoteSourceBufferProxy::*)(WTF::MediaTime const&), std::__1::tuple<WTF::MediaTime>&&)::'lambda'(auto&&...), std::__1::tuple<WTF::MediaTime>>(WebKit::RemoteSourceBufferProxy&&, WebKit::RemoteSourceBufferProxy&&) 11 0x14647be90 void IPC::callMemberFunction<WebKit::RemoteSourceBufferProxy, WebKit::RemoteSourceBufferProxy, void (WTF::MediaTime const&), std::__1::tuple<WTF::MediaTime>>(WebKit::RemoteSourceBufferProxy*, void (WebKit::RemoteSourceBufferProxy::*)(WTF::MediaTime const&), std::__1::tuple<WTF::MediaTime>&&) 12 0x146473020 void IPC::handleMessage<Messages::RemoteSourceBufferProxy::ReenqueueMediaIfNeeded, WebKit::RemoteSourceBufferProxy, WebKit::RemoteSourceBufferProxy, void (WTF::MediaTime const&)>(IPC::Connection&, IPC::Decoder&, WebKit::RemoteSourceBufferProxy*, void (WebKit::RemoteSourceBufferProxy::*)(WTF::MediaTime const&)) 13 0x146471bc8 WebKit::RemoteSourceBufferProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 14 0x14953d678 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 15 0x146a92910 WebKit::GPUConnectionToWebProcess::dispatchMessage(IPC::Connection&, IPC::Decoder&) 16 0x14693f104 WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 17 0x14950a7a0 IPC::Connection::dispatchMessage(IPC::Decoder&) 18 0x14950abf8 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 19 0x14950af40 IPC::Connection::dispatchOneIncomingMessage() 20 0x14952cf54 IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_17::operator()() const 21 0x14952ceb0 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_17, void>::call() 22 0x128d2feb4 WTF::Function<void ()>::operator()() const 23 0x128de1944 WTF::RunLoop::performWork() 24 0x128de6328 WTF::RunLoop::performWork(void*) 25 0x18b5114d8 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 26 0x18b51146c __CFRunLoopDoSource0 27 0x18b5111dc __CFRunLoopDoSources0 28 0x18b50fdc8 __CFRunLoopRun 29 0x18b50f434 CFRunLoopRunSpecific 30 0x18c643868 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 31 0x18c6bd4a4 -[NSRunLoop(NSRunLoop) run] com.apple.WebKit.GPU.Development terminated (pid 76400) for reason: crash LEAK: 1 WebPageProxy
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-05 16:02:46 PDT
EWS
Comment 2 2024-09-05 16:39:04 PDT
Test gardening commit 283240@main (6d19c69d143f): <https://commits.webkit.org/283240@main> Reviewed commits have been landed. Closing PR #33217 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 3 2024-09-05 21:57:36 PDT
EWS
Comment 4 2024-09-06 04:33:59 PDT
Committed 283266@main (c482824aa7fd): <https://commits.webkit.org/283266@main> Reviewed commits have been landed. Closing PR #33227 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.