REGRESSION(283049@main): [ macOS EWS ]: imported/w3c/web-platform-tests/media-source/mediasource-addsourcebuffer-mode.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=279232 rdar://135376752

Reviewed by Youenn Fablet.

In 283049@main we assumed that if we only had a single audio renderer, we could ignore the trackID as it is susceptible to change
over time.
However, a few places in the code assumes that if we can match an audio renderer to a trackID it indicates that we have a track configured.
However, the method could be called with a video's trackID and so we would incorrectly match the first audio renderer instead of returning nil.
This would cause later assertion as we would try to enqueue samples from an unexpected type.

We revert the change 283049@main ignoring the TrackID if we only had one audio track, going back to the previous logic.

We extend the scope of 283049@main to handling having the TrackID of the video tracks changing after a new init segment.

Covered by existing tests.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::updateTrackIds):
(WebCore::SourceBufferPrivateAVFObjC::trackDidChangeEnabled):

Canonical link: https://commits.webkit.org/283266@main